--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=findapp.db"
   },
+  "TokenKey": "supersecretunguessablekey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
